--- a/src/NiceQueue.Adapter.AmazonSQS/project.json
+++ b/src/NiceQueue.Adapter.AmazonSQS/project.json
@@ -1,6 +1,10 @@
 {
   "name": "NiceQueue.Adapter.AmazonSQS",
-  "version": "1.0.0-*",
+  "version": "0.5.0-*",
+  "authors": [ "Vaniday Team" ],
+  "owners": [ "vaniday" ],
+  "tags": [ "queue", "amazonsqs" ],
+  "description": "Simple abstraction layer for AmazonSQS, RabbitMQ, MemoryQueue and FileQueue",
   "compilationOptions": {
     "emitEntryPoint": false
   },
@@ -8,13 +12,18 @@
     "defaultNamespace": "NiceQueue.Adapter.AmazonSQS"
   },
   "dependencies": {
-    "NiceQueue": "1.0.0",
+    "NiceQueue": "0.5.0",
     "AWSSDK.SQS": "3.1.0.5",
     "Newtonsoft.Json": "8.0.2",
     "Microsoft.Extensions.OptionsModel": "1.0.0-rc1-final"
   },
   "commands": {},
   "frameworks": {
-    "dnx451": {}
+    "dnxcore50": {
+        "dependencies": {
+            "System.ComponentModel": "4.0.1-*"
+        }
+    },
+    "net451": {}
   }
 }
