--- a/src/NiceQueue.Adapter.AmazonSQS/project.json
+++ b/src/NiceQueue.Adapter.AmazonSQS/project.json
@@ -1,6 +1,6 @@
 {
   "name": "NiceQueue.Adapter.AmazonSQS",
-  "version": "0.5.3-*",
+  "version": "0.6.0-*",
   "authors": [
     "Vaniday Team"
   ],
@@ -19,10 +19,10 @@
     "defaultNamespace": "NiceQueue.Adapter.AmazonSQS"
   },
   "dependencies": {
-    "NiceQueue": "0.5.1",
-    "Newtonsoft.Json": "8.0.3",
+    "NiceQueue": "0.6.0",
     "Microsoft.Extensions.OptionsModel": "1.0.0-rc1-final",
-    "AWSSDK.SQS": "3.2.3-beta"
+    "AWSSDK.SQS": "3.1.0.6",
+    "Newtonsoft.JSON": "8.0.3"
   },
   "commands": {},
   "frameworks": {
