--- a/src/NiceQueue.Adapter.AmazonSQS/project.json
+++ b/src/NiceQueue.Adapter.AmazonSQS/project.json
@@ -1,6 +1,6 @@
 {
   "name": "NiceQueue.Adapter.AmazonSQS",
-  "version": "0.6.0-*",
+  "version": "1.0.1-*",
   "authors": [
     "Vaniday Team"
   ],
@@ -19,13 +19,14 @@
     "defaultNamespace": "NiceQueue.Adapter.AmazonSQS"
   },
   "dependencies": {
-    "NiceQueue": "0.6.0",
-    "Microsoft.Extensions.OptionsModel": "1.0.0-rc1-final",
-    "AWSSDK.SQS": "3.1.0.6",
-    "Newtonsoft.JSON": "8.0.3"
+    "NiceQueue": "1.0.1",
+    "Microsoft.Extensions.Options": "1.0.0-*",
+    "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0-*",
+    "AWSSDK.SQS": "3.2.5-*",
+    "Newtonsoft.Json": "9.0.1"
   },
   "commands": {},
   "frameworks": {
-    "net451": {}
+    "netcoreapp1.0": {}
   }
 }
