--- a/src/NiceQueue/project.json
+++ b/src/NiceQueue/project.json
@@ -1,6 +1,6 @@
 {
   "name": "NiceQueue",
-  "version": "0.6.0-*",
+  "version": "1.0.1-*",
   "authors": [
     "Vaniday Team"
   ],
@@ -19,10 +19,10 @@
     "defaultNamespace": "NiceQueue"
   },
   "dependencies": {
-    "Newtonsoft.JSON": "8.0.3"
+    "Newtonsoft.Json": "9.0.1"
   },
   "commands": {},
   "frameworks": {
-    "net451": {}
+    "netcoreapp1.0": {}
   }
 }
