--- a/src/NiceQueue.Adapter.MemoryQueue/project.json
+++ b/src/NiceQueue.Adapter.MemoryQueue/project.json
@@ -1,20 +1,37 @@
 {
   "name": "NiceQueue.Adapter.MemoryQueue",
   "version": "1.0.0-*",
-  "compilationOptions": {
+  "authors": [
+    "Vaniday Team"
+  ],
+  "packOptions": {
+    "owners": [
+      "vaniday"
+    ],
+    "tags": [
+      "queue",
+      "memoryqueue"
+    ]
+  },
+  "description": "NiceQueue implementation for MemoryQueue",
+  "buildOptions": {
     "emitEntryPoint": false
   },
   "tooling": {
     "defaultNamespace": "NiceQueue.Adapter.MemoryQueue"
   },
   "dependencies": {
-    "NiceQueue": "1.0.0",
+    "NiceQueue": "1.0.1",
     "Microsoft.Extensions.Options": "1.0.0-*",
-    "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0-*",
-    "Newtonsoft.JSON": "9.0.1"
+    "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0-*"
   },
   "commands": {},
   "frameworks": {
-    "net451": {}
+    "net451": {},
+    "netcoreapp1.0": {
+      "dependencies": {
+        "System.Collections.Concurrent": "4.0.12"
+      }
+    }
   }
 }
